tests/lean/univ.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Defined: TypeM
Error (line: 29, pos: 0) universe constraint produces an integer overflow: Z2 >= Z1 + 1073741824
Error (line: 42, pos: 0) universe constraint inconsistency: U1 >= U4 + 0
